# tmf8829_universal_driver

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml  deploy-pages.yml
cmake/: tmf8829_universal_driverConfig.cmake.in  tmf8829_version.h.in
doc/: CMakeLists.txt  doxygen.config.in
doc/doxygen/: custom.css  header.html
doc/pages/: 01_integration_guide.md  02_getting_data.md
image/: CMakeLists.txt  tmf8829_default_image.c  tmf8829_default_image.h  tmf8829_fw_image.c  tmf8829_fw_image.h  tmf8829_fw_source.c  tmf8829_fw_source.h  tmf8829_vendor_image.c  tmf8829_vendor_image.h
include/tmf8829/: tmf8829.h  tmf8829_internal.h  tmf8829_ops.h  tmf8829_regs.h  tmf8829_types.h
src/: tmf8829.c  tmf8829_internal.h
tests/: CMakeLists.txt  test_clock_correction.cpp  test_config.cpp  test_default_image.cpp  test_download.cpp  test_enable.cpp  test_init.cpp  test_interrupts.cpp  test_measurement.cpp  test_smoke.cpp  test_utilities.cpp
tests/support/: fake_bus.hpp  fake_clock.cpp  fake_clock.hpp  fake_pin.hpp  test_fixture.hpp
